--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/executables/${fileBasenameNoExtension}"
+                "${fileDirname}/executables/${fileBasenameNoExtension}",
+                "-lSDL2"
             ],
             "options": {
                 "cwd": "${fileDirname}"
